Whitespace resolved

--- a/styles.css
+++ b/styles.css
@@ -307,6 +307,7 @@ html {
 
 #skills {
     padding-top: 15px;
+    padding-bottom: 15px;
     background: #121214;
 }
 
